--- a/transformer/pyproject.toml
+++ b/transformer/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "torch (>=2.9.0,<3.0.0)",
     "torchvision (>=0.24.0,<0.25.0)",
     "torchaudio (>=2.9.0,<3.0.0)",
-    "datasets (>=4.2.0,<5.0.0)"
+    "datasets (>=4.2.0,<5.0.0)",
+    "tokenizers (>=0.22.1,<0.23.0)"
 ]
 
 [tool.poetry]
