--- a/transformer/pyproject.toml
+++ b/transformer/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "torchvision (>=0.24.0,<0.25.0)",
     "torchaudio (>=2.9.0,<3.0.0)",
     "datasets (>=4.2.0,<5.0.0)",
-    "tokenizers (>=0.22.1,<0.23.0)"
+    "tokenizers (>=0.22.1,<0.23.0)",
+    "transformers (>=4.57.1,<5.0.0)"
 ]
 
 [tool.poetry]
