--- a/transformer/pyproject.toml
+++ b/transformer/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "datasets (>=4.2.0,<5.0.0)",
     "tokenizers (>=0.22.1,<0.23.0)",
     "transformers (>=4.57.1,<5.0.0)",
-    "ipykernel (>=7.1.0,<8.0.0)"
+    "ipykernel (>=7.1.0,<8.0.0)",
+    "evaluate (>=0.4.6,<0.5.0)",
+    "matplotlib (>=3.10.8,<4.0.0)"
 ]
 
 [tool.poetry]
