--- a/transformer/pyproject.toml
+++ b/transformer/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "transformers (>=4.57.1,<5.0.0)",
     "ipykernel (>=7.1.0,<8.0.0)",
     "evaluate (>=0.4.6,<0.5.0)",
-    "matplotlib (>=3.10.8,<4.0.0)"
+    "matplotlib (>=3.10.8,<4.0.0)",
+    "wandb (>=0.24.0,<0.25.0)",
+    "sacrebleu (>=2.6.0,<3.0.0)"
 ]
 
 [tool.poetry]
